WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
125188
Fix regression caused by
r158599
https://bugs.webkit.org/show_bug.cgi?id=125188
Summary
Fix regression caused by r158599
Eric Carlson
Reported
2013-12-03 14:44:35 PST
r158599
added a setting to disable video plugin proxy support in HTMLMediaElement. It also caused the media player to be unconditionally cleared in HTMLMediaElement::clearMediaPlayer, which the old code did not do.
Attachments
Proposed patch
(1.15 KB, patch)
2013-12-03 14:47 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2013-12-03 14:44:54 PST
<
rdar://problem/15540893
>
Eric Carlson
Comment 2
2013-12-03 14:47:52 PST
Created
attachment 218346
[details]
Proposed patch
Jer Noble
Comment 3
2013-12-03 14:49:42 PST
Comment on
attachment 218346
[details]
Proposed patch r=me
Eric Carlson
Comment 4
2013-12-03 15:02:56 PST
Committed
r160046
-
https://trac.webkit.org/r160046
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug