Fix regression caused by r158599 https://bugs.webkit.org/show_bug.cgi?id=125188

Reviewed by Jer Noble.

* html/HTMLMediaElement.cpp:
(HTMLMediaElement::clearMediaPlayer): Do not clear m_player when PLUGIN_PROXY_FOR_VIDEO
    is enabled.


Canonical link: https://commits.webkit.org/143284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160046 268f45cc-cd09-0410-ab3c-d52691b4dbfc